Add border styling in css to index page

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,15 @@ html {
     background-color: lavender;
 }
 
-body {
-    color: darkgreen
+.main {
+    border: 5px black solid;
+    border-radius: 25px;
+    border-width: 1em;
+    width: 1000px;
+    padding: 10px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+    margin: auto;
 }
 
 .header {
@@ -12,7 +19,23 @@ body {
     color: rebeccapurple;
 }
 
+.header.index {
+    font-size: 28px;
+    color: rebeccapurple;
+    text-align: center;
+}
+
 ul li {
     margin-bottom: 15px;
-    font-size: 18px;
+    font-size: 18px;    
+}
+
+.links {
+    background-color: lightgreen;
+    border: black solid;
+    display: flex;
+    padding: 10px;
+    padding-right: 50px;
+    width: fit-content;
+    margin: auto;
 }
