--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
     color: rebeccapurple;
 }
 
-.header.index {
+.header.title{
     font-size: 28px;
     color: rebeccapurple;
     text-align: center;
@@ -44,4 +44,11 @@ button {
     background-color: lightgreen;
     font-size: 16px;
     font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+}
+
+img {
+    display: block;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
