--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,6 @@ html {
     text-align: center;
 }
 
-ul li {
-    margin-bottom: 15px;
-    font-size: 18px;    
-}
-
 .links {
     background-color: lightgreen;
     border: black solid;
@@ -38,6 +33,8 @@ ul li {
     padding-right: 50px;
     width: fit-content;
     margin: auto;
+    font-size: 18px;  
+    line-height: 150%;
 }
 
 button {
