--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,20 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.description {
+    border: black solid;
+    border-radius: 25px;
+    border-width: .2em;
+    width: auto;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.header.ingredients {
+
+}
+
+.header.steps {
+
+}
