--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,11 @@ img {
     padding: 10px;
 }
 
-.header.steps {
-
+.steps {
+    border: black solid;
+    border-radius: 25px;
+    border-width: .2em;
+    width: auto;
+    margin-top: 20px;
+    padding: 10px;
 }
